# valetudo-matter

./: CHANGELOG.md  Cargo.toml  Cross.toml  README.md  build.rs  mise.toml  openapi-schema.v2025.12.0.json  release-plz.toml
.github/workflows/: ci.yml  release.yml
src/: device.rs  generated.rs  handlers.rs  http.rs  main.rs  net.rs  node.rs
src/device/: capabilities.rs  state.rs
src/handlers/: identify.rs  rvc_clean_mode.rs  rvc_operational_state.rs  rvc_run_mode.rs  service_area.rs
src/http/: sse.rs
