[package]
name = "valetudo-matter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
hyper = { version = "1.8", features = ["http1", "client"] }
http-body-util = "0.1"
log = "0.4"
smol = "2"
socket2 = { version = "0.6", features = ["all"] }
smol-hyper = "0.1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
# Needed to avoid a linker error.
embassy-time = { version = "0.5", features = ["generic-queue-64"] }
regress = "0.10.5"
smol-macros = "0.1.1"
macro_rules_attribute = "0.2.2"
enumset = { version = "1.1.10", features = ["serde"] }
getifaddrs = "0.6.0"
enum-iterator = "2.3.0"
num_enum = "0.7.5"

[dependencies.rs-matter]
git = "https://github.com/project-chip/rs-matter"
rev = "34158e8dd451fe653b946f579aa1f1df19136b40"
features = ["std", "async-io"]

[build-dependencies]
anyhow = "1"
prettyplease = "0.2"
serde_json = "1"
schemars = "0.8"
syn = "2"
typify = "0.5.0"
